fix(sbb-header-action): fix styling after orientation change on iOS (#1664)

--- a/src/components/sbb-header-action/sbb-header-action.scss
+++ b/src/components/sbb-header-action/sbb-header-action.scss
@@ -119,10 +119,18 @@ $breakpoints: 'zero', 'micro', 'small', 'medium', 'large', 'wide', 'ultra';
 .sbb-header-action__text {
   @include sbb.text-xs--bold;
 
-  display: block;
+  display: flex;
 
   :host(:not([data-expanded])) & {
     @include sbb.screen-reader-only;
+  }
+
+  // This is a workaround to fix styling after orientation change on iOS.
+  // If the display value changes comparing to the base state (display: flex),
+  // it re-renders and displays everything correctly.
+  // Without this workaround, elements are overlapping each other.
+  :host([data-expanded]) & {
+    display: block;
   }
 }
 
